--- a/www/index.html
+++ b/www/index.html
@@ -9,16 +9,16 @@
         <meta name="theme-color" content="#2196f3">
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
         <!-- Your app title -->
-        <title>Midan</title>
+        <title>PayFort</title>
 
         <link rel="stylesheet" href="Framework7-1.4.0/dist/css/framework7.material.css">
         <link rel="stylesheet" href="Framework7-1.4.0/dist/css/framework7.material.colors.min.css">
         <link rel="stylesheet" href="Framework7-1.4.0/dist/css/my-app.css">
     </head>
 
-    <body>
+    <body >
         <!-- Views -->
-        <div class="views">
+        <div class="views" >
             <!-- Your main view, should have "view-main" class -->
             <div class="view view-main">
                 <!-- Pages container, because we use fixed navbar and toolbar, it has additional appropriate classes-->
@@ -36,8 +36,8 @@
                                 <form>
                                     <input class="userNameLogin" type="text" placeholder="&#xf007; User Name">
                                     <input class="passwordLogin" type="password" placeholder="&#xf084; Password">
-                                    <a href="conditions.html">
-                                   		 <button class="login-btn">Log in</button>
+                                    <a href="Home.html">
+                                        <button class="login-btn" style="background-color: #00974B !important; border-color: #00974B !important; color: #FFFFFF !important;;">Log in</button>
                                     </a>
                                 </form>
                             </div>
